<resources>
    <string name="app_name">Color Bank</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_picture_button_text">Select Picture</string>
    <string name="color_one_text">Color: #000000 | Complement: #FFFFFF</string>
    <string name="color_two_text">Color: #673AB7 | Complement: #98C548</string>
    <string name="color_three_text">Color: #F44336 | Complement: #0BBCC9</string>
    <string name="color_four_text">Color: #FF9800 | Complement: #0067FF</string>
</resources>

